--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h1>Hello Chandru</h1>
+<h1>Angular DataTable</h1>
 
 <app-datatable [data]="tableData" [columns]="tableColumns" [pageSize]="5"></app-datatable>
