--- a/src/app/datatable/datatable.component.html
+++ b/src/app/datatable/datatable.component.html
@@ -13,11 +13,11 @@
   </table>
   <div class="pagination">
     <button (click)="previousPage()" [disabled]="currentPage === 1">
-      <img src="/prev.png" alt="Previous">
+      <img src="/assets/prev.png" alt="Previous">
     </button>
     <span>Page {{ currentPage }} of {{ totalPages }}</span>
     <button class="next" (click)="nextPage()" [disabled]="currentPage === totalPages">
-      <img src="/next.png" alt="Next">
+      <img src="/assets/next.png" alt="Next">
     </button>
   </div>
 </div>
